--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+* {
+    font-family: 'Source Sans Pro', sans-serif;
+    text-shadow: 1px 1px #545454;
+    color: #f5f5f5;
+}
+
 body {
     transition: all 1s ease-in-out;
     width: 100%;
@@ -7,11 +13,28 @@ body {
     text-align: center;
 }
 
+p {
+    transition: all 0.5s ease-in-out;
+}
+
 .game_container {
     margin: auto;
-    width: 30%;
+    width: auto;
+}
+
+.guesses_left {
+    font-size: 24px;
 }
 
 .left_aligned {
-    text-align: left;
+    font-size: 20px;
+    margin: auto;
+}
+
+.status {
+    font-size: 36px;
+}
+
+.word_mask {
+    font-size: 36px;
 }
