--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ p {
     font-size: 24px;
 }
 
-.left_aligned {
+.letters_chosen {
     font-size: 20px;
     margin: auto;
 }
@@ -44,7 +44,7 @@ p {
     -webkit-animation: otherspin 2s infinite linear;
 }
 
-.word_mask {
+.word_mask, .score {
     font-size: 36px;
 }
 
