--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,5 @@
 * {
     font-family: 'Source Sans Pro', sans-serif;
-    text-shadow: 1px 1px #545454;
     color: #f5f5f5;
 }
 
@@ -11,10 +10,11 @@ body {
     margin: 0;
     display: inline-block;
     text-align: center;
+    background: #f5f5f5;
 }
 
 p {
-    transition: all 0.5s ease-in-out;
+    transition: all 2.5s ease-in-out;
 }
 
 .game_container {
